feat: change credencials on firebaseconfig

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,62 +1,63 @@
 {
-    "welcome": "Welcome!!",
+    "welcome": "Welcome",
     "logout": "Log out",
     "deleteAccount": "Delete account",
-    "confirmDelete": "Are you sure you want to delete your account?",
+    "confirmDelete": "Do you really want to delete your account?",
     "cancel": "Cancel",
     "delete": "Delete",
-    "login": "Log-in",
+    "login": "Sign in to your account",
     "password": "Password",
     "register": "Register",
     "attention": "Attention",
     "error": "Error",
     "success": "Success",
-    "loading": "Loading...",
+    "loading": "Loading…",
     "signInToContinue": "Sign in to continue",
     "email": "Email",
     "enterYourEmail": "Enter your email",
     "enterYourPassword": "Enter your password",
-    "signIn": "Sign In",
+    "signIn": "Sign in",
     "or": "or",
-    "forgotPassword": "Forgot password?",
-    "dontHaveAccount": "Don't have an account?",
-    "fillAllFields": "Fill in all fields!",
-    "invalidCredentials": "Incorrect email or password, please check.",
-    "loginError": "Login error. Please try again.",
-    "enterEmailToRecover": "Enter email to recover password",
-    "recoveryEmailSent": "Recovery email sent",
-    "errorSendingRecoveryEmail": "Error sending password reset email",
-    "createAccount": "Create Account",
-    "signUpToContinue": "Sign up to continue",
+    "forgotPassword": "Forgot your password?",
+    "dontHaveAccount": "Don’t have an account?",
+    "fillAllFields": "Fill in all fields.",
+    "invalidCredentials": "Invalid email or password. Please check your details.",
+    "loginError": "Couldn’t sign in. Please try again.",
+    "enterEmailToRecover": "Enter your email to recover your password.",
+    "recoveryEmailSent": "We’ve sent a recovery email.",
+    "errorSendingRecoveryEmail": "Couldn’t send the password recovery email.",
+    "createAccount": "Create account",
+    "signUpToContinue": "Create your account to continue",
     "fullName": "Full name",
     "enterYourFullName": "Enter your full name",
     "confirmPassword": "Confirm password",
     "confirmYourPassword": "Confirm your password",
     "alreadyHaveAccount": "Already have an account?",
-    "enterFullName": "Enter your full name!",
-    "enterEmail": "Enter your email!",
-    "enterPassword": "Enter your password!",
-    "passwordMinLength": "Password must be at least 6 characters!",
-    "passwordsDontMatch": "Passwords don't match!",
-    "accountCreatedSuccessfully": "Account created successfully!",
-    "registrationError": "Error creating account. Please try again.",
-    "emailAlreadyInUse": "This email is already registered.",
+    "enterFullName": "Enter your full name.",
+    "enterEmail": "Enter your email.",
+    "enterPassword": "Enter your password.",
+    "passwordMinLength": "Password must be at least 6 characters.",
+    "passwordsDontMatch": "Passwords do not match.",
+    "accountCreatedSuccessfully": "Account created successfully.",
+    "registrationError": "Couldn’t create the account. Please try again.",
+    "emailAlreadyInUse": "This email is already in use.",
     "invalidEmail": "Invalid email.",
-    "weakPassword": "Password too weak.",
-    "changePassword": "Change Password",
-    "enterNewPasswordToChange": "Enter your new password to change",
+    "weakPassword": "Password is too weak.",
+    "changePassword": "Change password",
+    "enterNewPasswordToChange": "Enter your new password to continue.",
     "currentPassword": "Current password",
     "enterCurrentPassword": "Enter your current password",
     "newPassword": "New password",
     "enterNewPassword": "Enter your new password",
     "confirmNewPassword": "Confirm new password",
-    "noUserLoggedIn": "No user logged in",
+    "noUserLoggedIn": "No user is signed in.",
     "continue": "Continue",
-    "passwordChangedSuccessfully": "Password changed successfully!",
-    "reauthenticationError": "Reauthentication error. Please try again.",
-    "passwordChangeError": "Error changing password. Please try again.",
+    "passwordChangedSuccessfully": "Password changed successfully.",
+    "reauthenticationError": "Reauthentication failed. Please try again.",
+    "passwordChangeError": "Couldn’t change the password. Please try again.",
     "wrongCurrentPassword": "Incorrect current password.",
-    "requiresRecentLogin": "For security, please log in again before changing password.",
+    "requiresRecentLogin": "For security, please sign in again before changing your password.",
     "back": "Back",
-    "toggleTheme": "Toggle Theme"
-}
+    "toggleTheme": "Toggle theme"
+  }
+  
