--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,62 +1,63 @@
 {
-    "welcome": "Seja bem-vindo",
-    "logout": "Sair da conta",
-    "deleteAccount": "Excluir conta",
-    "confirmDelete": "Tem certeza que deseja excluir a conta?",
+    "welcome": "Bem-vindo(a)",
+    "logout": "Sair",
+    "deleteAccount": "Apagar conta",
+    "confirmDelete": "Deseja realmente apagar sua conta?",
     "cancel": "Cancelar",
-    "delete": "Excluir",
-    "login": "Realizar o login",
+    "delete": "Apagar",
+    "login": "Entrar na sua conta",
     "password": "Senha",
     "register": "Cadastre-se",
     "attention": "Atenção",
     "error": "Erro",
     "success": "Sucesso",
-    "loading": "Carregando...",
-    "signInToContinue": "Faça login para continuar",
+    "loading": "Carregando…",
+    "signInToContinue": "Login para continuar",
     "email": "E-mail",
-    "enterYourEmail": "Digite seu e-mail",
-    "enterYourPassword": "Digite sua senha",
-    "signIn": "Entrar",
+    "enterYourEmail": "Informe seu e-mail",
+    "enterYourPassword": "Informe sua senha",
+    "signIn": "Login",
     "or": "ou",
-    "forgotPassword": "Esqueceu a senha?",
-    "dontHaveAccount": "Não tem uma conta?",
-    "fillAllFields": "Preencha todos os campos!",
-    "invalidCredentials": "E-mail ou senha incorretos, verifique.",
-    "loginError": "Erro ao fazer login. Tente novamente.",
-    "enterEmailToRecover": "Digite o e-mail para recuperar a senha",
-    "recoveryEmailSent": "Email de recuperação enviado",
-    "errorSendingRecoveryEmail": "Erro ao enviar e-mail de reset de senha",
-    "createAccount": "Criar Conta",
-    "signUpToContinue": "Cadastre-se para continuar",
+    "forgotPassword": "Esqueceu sua senha?",
+    "dontHaveAccount": "Ainda não tem conta?",
+    "fillAllFields": "Preencha todos os campos.",
+    "invalidCredentials": "E-mail ou senha inválidos. Confira os dados.",
+    "loginError": "Não foi possível entrar. Tente novamente.",
+    "enterEmailToRecover": "Informe o e-mail para recuperar a senha.",
+    "recoveryEmailSent": "Enviamos um e-mail de recuperação.",
+    "errorSendingRecoveryEmail": "Não foi possível enviar o e-mail de recuperação.",
+    "createAccount": "Criar conta",
+    "signUpToContinue": "Crie sua conta para continuar",
     "fullName": "Nome completo",
-    "enterYourFullName": "Digite seu nome completo",
+    "enterYourFullName": "Informe seu nome completo",
     "confirmPassword": "Confirmar senha",
     "confirmYourPassword": "Confirme sua senha",
-    "alreadyHaveAccount": "Já tem uma conta?",
-    "enterFullName": "Digite seu nome completo!",
-    "enterEmail": "Digite seu e-mail!",
-    "enterPassword": "Digite sua senha!",
-    "passwordMinLength": "A senha deve ter pelo menos 6 caracteres!",
-    "passwordsDontMatch": "As senhas não coincidem!",
-    "accountCreatedSuccessfully": "Conta criada com sucesso!",
-    "registrationError": "Erro ao criar conta. Tente novamente.",
-    "emailAlreadyInUse": "Este e-mail já está cadastrado.",
+    "alreadyHaveAccount": "Já possui conta?",
+    "enterFullName": "Informe seu nome completo.",
+    "enterEmail": "Informe seu e-mail.",
+    "enterPassword": "Informe sua senha.",
+    "passwordMinLength": "A senha deve ter pelo menos 6 caracteres.",
+    "passwordsDontMatch": "As senhas não coincidem.",
+    "accountCreatedSuccessfully": "Conta criada com sucesso.",
+    "registrationError": "Não foi possível criar a conta. Tente novamente.",
+    "emailAlreadyInUse": "Este e-mail já está em uso.",
     "invalidEmail": "E-mail inválido.",
     "weakPassword": "Senha muito fraca.",
-    "changePassword": "Alterar Senha",
-    "enterNewPasswordToChange": "Digite sua nova senha para alterar",
+    "changePassword": "Alterar senha",
+    "enterNewPasswordToChange": "Digite a nova senha para continuar.",
     "currentPassword": "Senha atual",
-    "enterCurrentPassword": "Digite sua senha atual",
+    "enterCurrentPassword": "Informe sua senha atual",
     "newPassword": "Nova senha",
-    "enterNewPassword": "Digite sua nova senha",
+    "enterNewPassword": "Informe a nova senha",
     "confirmNewPassword": "Confirmar nova senha",
-    "noUserLoggedIn": "Nenhum usuário logado",
+    "noUserLoggedIn": "Nenhum usuário conectado.",
     "continue": "Continuar",
-    "passwordChangedSuccessfully": "Senha alterada com sucesso!",
-    "reauthenticationError": "Erro na reautenticação. Tente novamente.",
-    "passwordChangeError": "Erro ao alterar senha. Tente novamente.",
+    "passwordChangedSuccessfully": "Senha alterada com sucesso.",
+    "reauthenticationError": "Falha na reautenticação. Tente novamente.",
+    "passwordChangeError": "Não foi possível alterar a senha. Tente novamente.",
     "wrongCurrentPassword": "Senha atual incorreta.",
     "requiresRecentLogin": "Por segurança, faça login novamente antes de alterar a senha.",
     "back": "Voltar",
-    "toggleTheme": "Alternar Tema"
-}
+    "toggleTheme": "Alternar tema"
+  }
+  
